# eclp-amm-poc

./: .env  README.md  constants.py  decode_logs.py  gyd_test_1.json  pyproject.toml  sdai_test_1.json  sdai_test_2.json  sdai_test_3.json  usdc_test.json  usdc_test2.json
floats/: amm.py  entrypoint.py  invariant.py  offsets.py  optimized_amm.py  optimized_entrypoint.py  test_derivative.py  test_derivative_2.py
floats/abis/: erc20.py  sdai_rate_provider.py  vault.py
floats/blockchain/: get_pool_data.py  get_rate_provider_data.py  get_token_data.py  get_vault_data.py
floats/data/: pool_data.py  rate_provider_data.py  vault_data.py
floats/schemas/: pool.py  rate_providers.py  token.py  vault.py
integers/: amm.py  entrypoint.py  invariant.py  offsets.py
integers/abis/: eclp_gyd_sdai.py
integers/blockchain/: get_pool_data.py  get_vault_data.py
integers/data/: pool_data.py
integers/integer_math/: signed_fixed_point.py
integers/schemas/: pool.py  vault.py
